<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    //android:onClick="navDrawerClick"
    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_directory"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/directory"
        android:onClick="navDrawerClick" />
    <item
        android:id="@+id/nav_parking"
        android:title="@string/parking_menu"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:onClick="navDrawerClick"/>
    <item
        android:id="@+id/nav_events"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/events"
        android:onClick="navDrawerClick"/>
    <item
        android:id="@+id/nav_classes"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/classes" />
    <item
        android:id="@+id/nav_navigate"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/navigate" />
    <item
        android:id="@+id/alerts"
        android:title="@string/alerts"
        android:icon="@android:drawable/ic_dialog_alert"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
        android:onClick="navDrawerClick"/>
    <item
        android:id="@+id/nav_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit"
        android:onClick="navDrawerClick"/>
    </group>

</menu>
